--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Age calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
         <script src="node.js"></script>
@@ -45,5 +46,7 @@
                 <p><i><span id="ageYears">--</span> YEARS</i></p>
                 <p><i><span id="ageMonths">--</span> MONTHS</i></p>
                 <p><i><span id="ageDays">--</span> DAYS</i></p>
+
+                <button id="reset-button" onclick="resetFields()">Reset</button>
             </div>
         </div>
