--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Age calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" type="image/png" href="favic.PNG">
         <script src="node.js"></script>
     </head>
     <body>
@@ -43,9 +44,9 @@
             </div>
 
             <div class="result">
-                <p><i><span id="ageYears">--</span> YEARS</i></p>
-                <p><i><span id="ageMonths">--</span> MONTHS</i></p>
-                <p><i><span id="ageDays">--</span> DAYS</i></p>
+                <p><i><span id="ageYears">-- --</span> YEARS</i></p>
+                <p><i><span id="ageMonths">-- --</span> MONTHS</i></p>
+                <p><i><span id="ageDays">-- --</span> DAYS</i></p>
 
                 <button id="reset-button" onclick="resetFields()">Reset</button>
             </div>
